# Quadruped-ROS2-Navigation

./: .gitignore  LICENSE  NOTICE  README.md
configs/nav2/maps/: map122.pgm  map_ks.yaml  map_nt_4_all.yaml  maps.json
docs/: system_integrity_check.md
src/FAST_LIO/: package.xml
src/FAST_LIO/config/: mid360.yaml
src/FAST_LIO/launch/: mapping.launch.py
src/FAST_LIO/src/: IMU_Processing.hpp  laserMapping.cpp
src/agibot_motion_service/: CMakeLists.txt  package.xml
src/agibot_motion_service/launch/: motion_service.launch.py
src/agibot_motion_service/src/: motion_server_node.cpp
src/agibot_motion_service/srv/: GetState.srv  MotionControl.srv
src/gicp_localization/: CMakeLists.txt  package.xml
src/gicp_localization/src/: gicp_localization_node.cpp
src/lidar_scan_bridge/: package.xml  setup.cfg  setup.py
src/lidar_scan_bridge/config/: pointcloud_to_laserscan.yaml
src/lidar_scan_bridge/launch/: scan_bridge.launch.py
src/lidar_scan_bridge/lidar_scan_bridge/: fix_scan_stamp.py  nav_diag_logger.py
src/livox_ros_driver2/config/: MID360_config.json
src/livox_ros_driver2/src/: lddc.cpp
src/my_nav/: CMakeLists.txt  LICENSE  my_nav_costmap_plugins.xml  package.xml
src/my_nav/behavior_trees/: my_nav_tree.xml
src/my_nav/config/: nav2_params_gicp.yaml
src/my_nav/docs/: gicp_navigation_runtime.md
src/my_nav/include/my_nav/: rotate_to_goal_heading_node.hpp  virtual_obstacle_layer.hpp
src/my_nav/launch/: gicp_navigation.launch.py  nav2_bringup_gicp.launch.py
src/my_nav/maps/: map1.pgm  map1.yaml  mapqweewqe1.pgm
src/my_nav/src/: blocked_path_monitor_node.cpp  my_nav.cpp  rotate_to_goal_heading_node.cpp  scan_virtual_obstacle_node.cpp  virtual_obstacle_layer.cpp
src/pcd2pgm/: README.md  package.xml
src/pcd2pgm/config/: pcd2pgm.yaml
src/quadruped_navigation_bringup/: package.xml  setup.py
src/quadruped_navigation_bringup/config/maps/: map.pgm  map.yaml  map1.yaml  map_ks.pgm  map_nt_4_all.pgm
src/quadruped_navigation_bringup/launch/: navigation.launch.py
src/quadruped_navigation_bringup/quadruped_navigation_bringup/: run_when_ready.py  wait_for_nav_ready.py
tools/: check_global_obstacle_cost.py  check_scan_density.py  map_compress.py
unused_packages/: COLCON_IGNORE  README.md
unused_packages/LIO-SAM/: package.xml
unused_packages/LIO-SAM/config/: params.yaml  params_11.19.yaml  params_backup.yaml  params_version_0.1.yaml  robot.urdf.xacro  robot.urdf_version_0.1.xacro  robot.urdf_version_0.2.xacro  robot.urdf_version_0.3.xacro  rviz2.rviz
unused_packages/LIO-SAM/launch/: record.launch.py  record_tf.launch.py  run.launch_version_0.1.py
unused_packages/legacy_agibot_driver/: CMakeLists.txt  package.xml
unused_packages/legacy_agibot_driver/launch/: legacy_agibot_driver.launch.py
unused_packages/legacy_agibot_driver/src/: agibot_bridge_node.cpp  footprint_publisher_node.cpp
unused_packages/livox_repub/: CMakeLists.txt  package.xml
unused_packages/livox_repub/src/: livox_repub_node.cpp
unused_packages/rsLiDAR_sdk/: CMakeLists.txt  package.xml
unused_packages/rsLiDAR_sdk/config/: config.yaml
unused_packages/rsLiDAR_sdk/src/source/: source_pointcloud_ros.hpp
unused_packages/rs_driver/: CMakeLists.txt
unused_packages/rslidar_msg/: package.xml
unused_packages/rslidar_msg/ros1/: package.xml
unused_packages/yesense_std_ros2/config/: yesense_config.yaml
unused_packages/yesense_std_ros2/src/: yesense_node.cpp
