<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gicp_localization</name>
  <version>0.1.0</version>
  <description>GICP localization node that aligns FAST-LIO body-frame clouds to a PCD map and publishes map to odom.</description>
  <maintainer email="navigation@example.com">navigation owner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>small_gicp</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>