<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadruped_navigation_bringup</name>
  <version>0.1.0</version>
  <description>Navigation-only bringup for quadruped mapping, localization, Nav2, obstacle avoidance, and motion service.</description>
  <maintainer email="user@example.com">navigation owner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>lidar_scan_bridge</exec_depend>
  <exec_depend>gicp_localization</exec_depend>
  <exec_depend>my_nav</exec_depend>
  <exec_depend>agibot_motion_service</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
