<?xml version="1.0"?>
<package format="3">
  <name>legacy_agibot_driver</name>
  <version>0.1.0</version>
  <description>Legacy AgiBot bridge kept only as a reference for the pre-motion-service robot driver.</description>
  <maintainer email="navigation@example.com">navigation owner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
